fixed a bug on mobile with new image

--- a/css/non-template-index.css
+++ b/css/non-template-index.css
@@ -119,6 +119,7 @@ footer {
  @media screen and (max-width: 575px) {
    #leadership {
        display: block;
+       width: 100%;
    }
 
    #mobileCube {
